Fix aligning content of cards.

--- a/style.css
+++ b/style.css
@@ -77,6 +77,10 @@ p {
     overflow: hidden;
 }
 
+.btn:hover {
+    cursor: pointer;
+}
+
 .btn:hover::after {
     content: "";
     background-color: var(--color-secondary-3-mask);
@@ -178,6 +182,10 @@ main {
     border-radius: 1rem;
     padding: 5.6rem 2.8rem 3.2rem;
     position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
 }
 
 .card-icon {
@@ -186,11 +194,11 @@ main {
     left: 2.8rem;
 }
 
-.card > h3 {
+.card-content > h3 {
     margin-bottom: 1.6rem;
 }
 
-.card > p {
+.card-content > p {
     margin-bottom: 2.4rem;
 }
 
@@ -344,7 +352,7 @@ footer {
         padding-top: 6.4rem;
     }
 
-    .card > h3 {
+    .card-content > h3 {
         margin-bottom: 2.4rem;
     }
 
